JUANJO: update autentications jwt complete
