# swagger.json
@@ -174,6 +174,31 @@
         }
       }
     },
+    "/usuarios/auth": {
+      "post": {
+        "tags": ["AD-Usuarios"],
+        "summary": "inicio de session",
+        "description": "Ingreso al la autenticacion de clientes",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ad_auth"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "operacion exitosa"
+          },
+          "401": {
+            "description": "Usuario sin autorizacion"
+          }
+        }
+      }
+    },
     "/usuarios": {
       "post": {
         "tags": ["AD-Usuarios"],
@@ -1101,6 +1126,21 @@
           "TCPersonaId": {
             "type": "string",
             "format": "uuid"
+          }
+        }
+      },
+      "ad_auth": {
+        "type": "object",
+        "properties": {
+          "Email": {
+            "type": "string",
+            "format": "email"
+          },
+          "Usuario": {
+            "type": "string"
+          },
+          "Password": {
+            "type": "string"
           }
         }
       },
